--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,16 @@
   
   <url>http://maven.apache.org</url>
   
-  <properties>
+  <!--
+ <properties>
    <maven.compiler.source>1.6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
  </properties>
+-->
+  <properties>
+  <sonar.organization>kprbarani99</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
   
   <dependencies>
     <dependency>
